Fix map spacing and add example map

--- a/src/components/DetailedRoute/_DetailedRoute.scss
+++ b/src/components/DetailedRoute/_DetailedRoute.scss
@@ -31,3 +31,11 @@
     justify-content: center;
   }
 }
+
+.route-details {
+  display: flex;
+
+  &__map {
+    height: 150px;
+  }
+}
